feat: switch update notifier to Modrinth API